[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://MiscAsset/ExclamationPoint.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20.1866 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.8454
height = 12.2082

[sub_resource type="Theme" id=3]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.197388, -0.215849 )
scale = Vector2( 0.099722, 0.0716288 )
texture = ExtResource( 1 )

[node name="HoleDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoleDetection"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FixBar" type="ProgressBar" parent="."]
visible = false
margin_left = -72.6783
margin_top = -90.6119
margin_right = 77.3217
margin_bottom = -40.6119
theme = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CannotFix" type="Sprite" parent="."]
visible = false
position = Vector2( 1.0647, -54.5329 )
scale = Vector2( 1.43868, 1.43868 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="HoleDetection" to="." method="_on_HoleDetection_area_entered"]
[connection signal="area_exited" from="HoleDetection" to="." method="_on_HoleDetection_area_exited"]
